search filters is a button instead of a p

--- a/travel-event-host-app/src/components/event-search/styles.module.css
+++ b/travel-event-host-app/src/components/event-search/styles.module.css
@@ -26,7 +26,7 @@
   margin-top: 3em;
 }
 .filterBtn {
-  display: none;
+  display: none !important;
   margin: 1em 0;
   text-align: center;
   font-weight: 500;
@@ -61,7 +61,7 @@
     display: block !important;
   }
   .filterBtn {
-    display: block;
+    display: block !important;
   }
   .eventsGrid {
     padding-top: 0;
