added a hot (hair flip) new color

--- a/travel-event-host-app/src/app/globals.css
+++ b/travel-event-host-app/src/app/globals.css
@@ -19,6 +19,7 @@
   --navy-blue: #1D275F;
   --green-confirmation: #64aa76;
   --burnt-orange-cancel-error: #aa6464;
+  --sexy-hot-pink: #e32359;
 }
 
 body {
