--- a/travel-event-host-app/src/components/header/styles.module.css
+++ b/travel-event-host-app/src/components/header/styles.module.css
@@ -151,3 +151,14 @@
     align-self: center;
   }
 }
+
+.messageNotificationDot {
+  position: relative;
+  height: 10px;
+  width: 10px;
+  border-radius: 50%;
+  top: 24px;
+  left: 27px;
+  background-color: red;
+  z-index: 2;
+}
